<resources>
    <string name="app_name">Timer</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_00h00m00s">00H00M00S</string>
    <string name="X">X</string>
    <string name="スタート">スタート</string>
    <string name="リセット">リセット</string>
</resources>